--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <link
   rel="stylesheet"
-  href="/bootstrap-4.4.1-dist/css/bootstrap.min.css"
+  href="http://srv166.teste.website/~serelcom/bootstrap-4.4.1-dist/css/bootstrap.min.css"
   integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
   crossorigin="anonymous"
 />
-<script src="/bootstrap-4.4.1-dist/js/bootstrap.js"></script>
+<script src="http://srv166.teste.website/~serelcom/bootstrap-4.4.1-dist/js/bootstrap.js"></script>
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="#">
-    <img src="/assets/Group 108.png" width="30" height="30" alt="" />
+    <img
+      src="http://srv166.teste.website/~serelcom/assets/Group 108.png"
+      width="30"
+      height="30"
+      alt=""
+    />
   </a>
 </nav>
