--- a/index.html
+++ b/index.html
@@ -9,16 +9,24 @@
   crossorigin="anonymous"
 />
 <script src="http://srv166.teste.website/~serelcom/bootstrap-4.4.1-dist/js/bootstrap.js"></script>
-<nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="#">
-    <img
-      src="http://srv166.teste.website/~serelcom/assets/Group 108.png"
-      width="30"
-      height="30"
-      alt=""
-    />
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  </a>
-</nav>
+<div class="pos-f-t">
+  <div class="collapse" id="navbarToggleExternalContent">
+    <div class="bg-dark p-4">
+      <h4 class="text-white">Collapsed content</h4>
+      <span class="text-muted">Toggleable via the navbar brand.</span>
+    </div>
+  </div>
+  <nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+      <img
+        src="http://srv166.teste.website/~serelcom/assets/Group 108.png"
+        width="30"
+        height="30"
+        alt=""
+      />
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </a>
+  </nav>
+</div>
