--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <link
-  rel="stylesheet"
-  href="http://srv166.teste.website/~serelcom/bootstrap-4.4.1-dist/css/bootstrap.min.css"
+  rel="stylesheet" href="http://srv166.teste.website/~serelcom/bootstrap-4.4.1-dist/css/bootstrap.min.css"
   integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
   crossorigin="anonymous"
 />
 <script src="http://srv166.teste.website/~serelcom/bootstrap-4.4.1-dist/js/bootstrap.js"></script>
+
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="#">
     <img
@@ -18,3 +18,13 @@
     </button>
   </a>
 </nav>
+
+
+<footer>
+
+
+  <div class="footer-bar">
+    <img src="http://srv166.teste.website/~serelcom/assets/img/icone-serel.svg" alt="serel-icon-footer">
+    <p>Todos os direitos reservados Serel • 2019</p>
+  </div>
+</footer>
