--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <link
   rel="stylesheet" href="http://srv166.teste.website/~serelcom/bootstrap-4.4.1-dist/css/bootstrap.min.css"
   integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
@@ -21,15 +20,7 @@
 </nav>
 
 
-<footer>
 
-
-  <div class="footer-bar">
-    <img src="http://srv166.teste.website/~serelcom/assets/img/icone-serel.svg" alt="serel-icon-footer">
-    <p>Todos os direitos reservados Serel • 2019</p>
-  </div>
-</footer>
-=======
 <script
   src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
   integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
@@ -66,4 +57,11 @@
     <h1>Sistemas para Gestão em Fundo de Pensão</h1>
     <h3>Bem vindo a Serel</h3>
   </div>
->>>>>>> master
+
+
+  <footer>
+    <div class="footer-bar">
+      <img src="http://srv166.teste.website/~serelcom/assets/img/icone-serel.svg" alt="serel-icon-footer">
+      <p>Todoss os direitos reservados Serel • 2019</p>
+    </div>
+  </footer>
