--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
-<link
-  rel="stylesheet" href="http://srv166.teste.website/~serelcom/bootstrap-4.4.1-dist/css/bootstrap.min.css"
-  integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-  crossorigin="anonymous"
-/>
-<script src="http://srv166.teste.website/~serelcom/bootstrap-4.4.1-dist/js/bootstrap.js"></script>
+<head>
+  <link
+    rel="stylesheet" href="C:/Serel/bootstrap-4.4.1-dist/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="C:/Serel/css/style.css"/>
+  
+  <script src="C:/Serel/bootstrap-4.4.1-dist/js/bootstrap.js"></script>
+  <script src="C:/Serel/js/index.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+</head>
 
+
+<!---MENU DE NAVEGAÇÃO-->
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="#">
     <img
-      src="http://srv166.teste.website/~serelcom/assets/Group 108.png"
+      src="C:/Serel/assets/Group 108.png"
       width="30"
       height="30"
       alt=""
@@ -18,17 +23,6 @@
     </button>
   </a>
 </nav>
-
-
-
-<script
-  src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-  integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
-  crossorigin="anonymous"></script>
-<link rel="stylesheet" href="http://srv166.teste.website/~serelcom/bootstrap-4.4.1-dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-<link rel="stylesheet" href="http://srv166.teste.website/~serelcom/css/style.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-<script src="http://srv166.teste.website/~serelcom/bootstrap-4.4.1-dist/js/bootstrap.js"></script>
-<script src="http://srv166.teste.website/~serelcom/js/index.js"></script>
 
 <header>
   <div class="pos-f-t">
@@ -41,7 +35,7 @@
     <nav class="navbar navbar-light bg-light">
       <a class="navbar-brand" href="#">
         <img
-          src="http://srv166.teste.website/~serelcom/assets/Group 108.png"
+          src="C:/Serel/assets/Group 108.png"
           width="30"
           height="30"
           alt=""
@@ -61,7 +55,7 @@
 
   <footer>
     <div class="footer-bar">
-      <img src="http://srv166.teste.website/~serelcom/assets/img/icone-serel.svg" alt="serel-icon-footer">
+      <img src="C:/Serel/assets/img/icone-serel.png" alt="serel-icon-footer">
       <p>Todoss os direitos reservados Serel • 2019</p>
     </div>
   </footer>
