--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     rel="stylesheet" href="C:/Serel/bootstrap-4.4.1-dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="C:/Serel/css/style.css"/>
   
-  <script src="C:/Serel/bootstrap-4.4.1-dist/js/bootstrap.js"></script>
+  <script src="C:/Serel/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
   <script src="C:/Serel/js/index.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 </head>
@@ -56,6 +56,6 @@
   <footer>
     <div class="footer-bar">
       <img src="C:/Serel/assets/img/icone-serel.png" alt="serel-icon-footer">
-      <p>Todoss os direitos reservados Serel • 2019</p>
+      <p>Todos os direitos reservados Serel • 2019</p>
     </div>
   </footer>
