link da font do google e uns css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <link
     rel="stylesheet" href="C:/Serel/bootstrap-4.4.1-dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="C:/Serel/css/style.css"/>
-  
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
   <script src="C:/Serel/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
   <script src="C:/Serel/js/index.js"></script>
@@ -56,7 +57,10 @@
 
   <footer>
     <div class="footer-bar">
-      <img src="C:/Serel/assets/img/icone-serel.png" alt="serel-icon-footer">
-      <p>Todos os direitos reservados Serel • 2019</p>
+      <div class="footer-barr-content">
+        <img src="C:/Serel/assets/img/icone-serel.png" alt="serel-icon-footer">
+        <p>Todos os direitos reservados Serel • 2019</p>
+    </div>
+
     </div>
   </footer>
