--- a/index.html
+++ b/index.html
@@ -12,32 +12,12 @@
 
 
 <!---MENU DE NAVEGAÇÃO-->
-<nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="#">
-    <img
-      src="C:/Serel/assets/Group 108.png"
-      width="30"
-      height="30"
-      alt=""
-    />
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  </a>
-</nav>
-
 <header>
   <div class="pos-f-t">
-    <div class="collapse" id="navbarToggleExternalContent">
-      <div class="bg-dark p-4">
-        <h4 class="text-white">Collapsed content</h4>
-        <span class="text-muted">Toggleable via the navbar brand.</span>
-      </div>
-    </div>
     <nav class="navbar navbar-light bg-light">
       <a class="navbar-brand" href="#">
         <img
-          src="C:/Serel/assets/Group 108.png"
+          src="C:/Serel/assets/img/Group 108.png"
           width="30"
           height="30"
           alt=""
@@ -48,10 +28,14 @@
       </a>
     </nav>
   </div>
+  <div class="collapse" id="navbarToggleExternalContent">
+    <div class="bg-dark p-4">
+      <h4 class="text-white">Collapsed content</h4>
+      <span class="text-muted">Toggleable via the navbar brand.</span>
+    </div>
+  </div>
 </header>
   <div id="Banner_principal">
-    <h1>Sistemas para Gestão em Fundo de Pensão</h1>
-    <h3>Bem vindo a Serel</h3>
   </div>
 
 
