--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<head>
-  
+<head>  
   <link
     rel="stylesheet" href="C:/Serel/bootstrap-4.4.1-dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="C:/Serel/css/style.css"/>
+  <link rel="stylesheet" href="C:/Serel/css/responsivo.css"/>
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
