--- a/index.html
+++ b/index.html
@@ -12,20 +12,22 @@
 
 
 <!---MENU DE NAVEGAÇÃO-->
-<header>
+
+<header class="container">
   <div class="pos-f-t">
-    <nav class="navbar navbar-light bg-light">
+    <button id="btn_acesso">Acesso restrito</button>
+    <nav class="navbar navbar-light col-12">
       <a class="navbar-brand" href="#">
         <img
           src="C:/Serel/assets/img/Group 108.png"
-          width="30"
-          height="30"
+          height="100"
           alt=""
         />
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
       </a>
+      <button class="navbar-toggler" id="btn_menu" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="menu">MENU</span>
+        <span class="navbar-toggler-icon"></span>
+      </button>
     </nav>
   </div>
   <div class="collapse" id="navbarToggleExternalContent">
