--- a/index.html
+++ b/index.html
@@ -37,6 +37,23 @@
         </div>
     </div>
 </header>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active" id="ind1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1" id="ind2"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2" id="ind3"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active" id="Banner_principal">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="..." alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="..." alt="Third slide">
+      </div>
+    </div>
+  </div>
 <div id="Banner_principal">
 </div>
 
