--- a/index.html
+++ b/index.html
@@ -31,9 +31,13 @@
         </nav>
     </div>
     <div class="collapse" id="navbarToggleExternalContent">
-        <div class="bg-dark p-4">
-            <h4 class="text-white">Collapsed content</h4>
-            <span class="text-muted">Toggleable via the navbar brand.</span>
+        <div class="p-4">
+            <ul id="menuab">
+                <li>menu 1</li>
+                <li>menu 2</li>
+                <li>menu 3</li>
+                <li>menu 4</li>
+            </ul>
         </div>
     </div>
 </header>
