--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
       <li data-target="#carouselExampleIndicators" data-slide-to="2" id="ind3"></li>
     </ol>
     <div class="carousel-inner">
-      <div class="carousel-item active" id="Banner_principal">
+      <div class="carousel-item active">
+          <img src="C:/Serel/assets/img/BannerPrincipal.jpg">
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="..." alt="Second slide">
@@ -59,6 +60,13 @@
     </div>
   </div>
 
+  <div class="container mt-5 pt-5">
+      <div class="row">
+        <div class="col-4"> <img src="c:/Serel/assets/img/desenvolvimentomobile.svg"></div>
+        <div class="col-4"> <img src="c:/Serel/assets/img/SAS.svg"></div>
+        <div class="col-4"> <img src="c:/Serel/assets/img/planoinstituido.svg"></div>
+      </div>
+  </div>
 
 <footer>
     <div class="col-md-6">
