--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
   </div>
 
-  <div class="container mt-5 pt-5">
+  <div class="container mt-5">
       <div class="row">
         <div class="col-4"> <img src="c:/Serel/assets/img/desenvolvimentomobile.svg"></div>
         <div class="col-4"> <img src="c:/Serel/assets/img/SAS.svg"></div>
