--- a/index.html
+++ b/index.html
@@ -70,13 +70,20 @@
 
   <div class="container">
     <div class="row">
-        <div class="col-md-4 quemSomos"><img src="c:/Serel/assets/img/quemSomos.svg"></div>
+        <div class="col-md-4 quemSomos"><img src="c:/Serel/assets/img/quemSomos.jpg"></div>
         <div class="col-md-8">
             <h1 id="quemH1">Quem somos</h1>
-            <p class="quemP">Em junho de 1989 nascemos para desenvolver Sistemas especializados em Gestão e Controle de Fundos de Pensão. Desde então conquistamos o reconhecimento da comunidade de Fundos de Pensão, graças ao profissionalismo da nossa equipe, uma estreita interação com os clientes e, sobretudo, a permanente evolução dos produtos desenvolvidos. 
+            <p class="quemP">Em junho de 1989 nascemos para desenvolver Sistemas especializados em Gestão e Controle de Fundos de Pensão. Desde então conquistamos o reconhecimento da comunidade de Fundos de Pensão, graças ao profissionalismo da nossa equipe, uma estreita interação com os clientes e, sobretudo, a permanente evolução dos produtos desenvolvidos.</br> 
                 De forma prática, estes são reflexos de um compromisso nosso: construir soluções exclusivas para cada entidade. Assim, pensamos, produzimos, testamos e implantamos! 
                 </p>
         </div>
+    </div>
+  </div>
+
+  <div class="mt-5 container">
+    <div class="row">
+        <h1 class="col-md-12 quemFaz">Quem faz</h1>
+        <p class="col-md-12">Mais importante que soluções tecnologias, são as mentes</br> que pensam e concebem nossas grandes soluções.</p>
     </div>
   </div>
 
