--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
           <img src="C:/Serel/assets/img/BannerPrincipal.jpg">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="..." alt="Second slide">
+        <img class="d-block w-100" src="C:/Serel/assets/img/BannerPrincipal.jpg" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="..." alt="Third slide">
+        <img class="d-block w-100" src="C:/Serel/assets/img/BannerPrincipal.jpg" alt="Third slide">
       </div>
     </div>
   </div>
@@ -79,14 +79,14 @@
         </div>
     </div>
   </div>
-
+<div class="border1">
   <div class="mt-5 container">
     <div class="row">
         <h1 class="col-md-12 quemFaz">Quem faz</h1>
         <p class="col-md-12">Mais importante que soluções tecnologias, são as mentes</br> que pensam e concebem nossas grandes soluções.</p>
     </div>
   </div>
-
+</div>
 <footer>
     <div class="container d-flex mt-5">
         <div class="col-md-6">
