--- a/index.html
+++ b/index.html
@@ -79,14 +79,24 @@
         </div>
     </div>
   </div>
-<div class="border1">
+<div>
   <div class="mt-5 container">
     <div class="row">
         <h1 class="col-md-12 quemFaz">Quem faz</h1>
-        <p class="col-md-12">Mais importante que soluções tecnologias, são as mentes</br> que pensam e concebem nossas grandes soluções.</p>
+        <p class="col-md-12 quemFaz2">Mais importante que soluções tecnologias, são as mentes</br> que pensam e concebem nossas grandes soluções.</p>
     </div>
   </div>
 </div>
+<div class="background-quemFaz">
+    <div class="quem-faz">
+        <div class="img-quem"><img class="img-quem1" src="c:/Serel/assets/img/sócio1.svg"><p><span>Cleyton Domingues</span>Sócio</p></div>
+        <div class="img-quem"><img class="img-quem2" src="c:/Serel/assets/img/sócio2.svg"><p><span>Fred Esteves</span>Sócio</p></div>
+        <div class="img-quem"><img class="img-quem1" src="c:/Serel/assets/img/sócio3.svg"><p><span>Cleyton Domingues</span>Sócio</p></div>
+        <div class="img-quem"><img class="img-quem2" src="c:/Serel/assets/img/sócio4.svg"><p><span>Alberto Caneda</span>Sócio</p></div>
+        <div class="img-quem"><img class="img-quem1" src="c:/Serel/assets/img/sócio5.svg"><p><span>Fred Esteves</span>Sócio</p></div>
+        <div class="img-quem"><img class="img-quem3" src="c:/Serel/assets/img/sócio6.svg"><p><span>Cleyton Domingues</span>Sócio</p></div>
+    </div>
+</div> 
 <footer>
     <div class="container d-flex mt-5">
         <div class="col-md-6">
