--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="C:/Serel/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
-    <script src="C:/Serel/js/index.js"></script>
 </head>
 
 
@@ -19,7 +18,7 @@
         <nav class="navbar navbar-light col-12">
             <a class="navbar-brand" href="#">
                 <img
-                src="C:/Serel/assets/img/Group 108.png"
+                src="C:/Serel/assets/img/serel-logo.png"
                 height="100"
                 alt=""
                 />
@@ -87,7 +86,8 @@
     </div>
   </div>
 </div>
-<div class="background-quemFaz">
+
+<div class="background-quemFaz pb-5">
     <div class="quem-faz">
         <div class="img-quem"><img class="img-quem1" src="c:/Serel/assets/img/sócio1.svg"><p><span>Cleyton Domingues</span>Sócio</p></div>
         <div class="img-quem"><img class="img-quem2" src="c:/Serel/assets/img/sócio2.svg"><p><span>Fred Esteves</span>Sócio</p></div>
@@ -97,6 +97,83 @@
         <div class="img-quem"><img class="img-quem3" src="c:/Serel/assets/img/sócio6.svg"><p><span>Cleyton Domingues</span>Sócio</p></div>
     </div>
 </div> 
+
+<div class="back-fazemos">
+<div class="container margin-top pb-5">
+    <div class="row">
+        <div class="col-md-6 fazemos-text">
+            <h1>O que fazemos</h1>
+            <p>Para acompanhar a constante mudança tanto de tecnologias de informação quanto do aparato 
+            regulatório da atividade de Previdência Complementar investimos continuamente em equipamentos, softwares e capacitação de colaboradores.
+            Como resultado deste esforço orgulhamo-nos do atendimento a diversos Fundos, alguns deles há mais de 25 anos.</p>
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-5">
+            <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active" data-interval="10000">
+                    <img src="c:/Serel/assets/img/slider-oqueFazemos.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-text">
+                        <h3>Sistema de gestão em EFPC’S </h3>
+                        <h6>Gestão Previdenciária</h6>
+                        <p>Um sistema de gerenciamento e controle completo onde é possível realizar simulações, cálculos e controles de saldos, 
+                            lançamentos em folha de pagamento, cadastro e remoção de participantes, controle das arrecadações por perfis, entre outras características únicas.
+                        </p>
+                    </div>
+                  </div>
+                  <div class="carousel-item" data-interval="2000">
+                    <img src="c:/Serel/assets/img/slider-oqueFazemos.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-text">
+                        <h3>Sistema de gestão em EFPC’S </h3>
+                        <h6>Gestão Previdenciária</h6>
+                        <p>Um sistema de gerenciamento e controle completo onde é possível realizar simulações, cálculos e controles de saldos, 
+                            lançamentos em folha de pagamento, cadastro e remoção de participantes, controle das arrecadações por perfis, entre outras características únicas.
+                        </p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="c:/Serel/assets/img/slider-oqueFazemos.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-text">
+                        <h3>Sistema de gestão em EFPC’S </h3>
+                        <h6>Gestão Previdenciária</h6>
+                        <p>Um sistema de gerenciamento e controle completo onde é possível realizar simulações, cálculos e controles de saldos, 
+                            lançamentos em folha de pagamento, cadastro e remoção de participantes, controle das arrecadações por perfis, entre outras características únicas.
+                        </p>
+                    </div>
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+        </div>
+    </div>
+</div>
+</div>
+
+    <div class="row sec-parceiros pt-5">
+        <div class="col-md-4 img-parceiros">
+            <img src="c:/Serel/assets/img/img-parcerias.png">
+        </div>
+        <div class="col-md-8 text-parceiros">
+            <h1>Parcerias</h1>
+            <p>Construir sólidas parcerias com grandes player do mercado</br>tecnológico e financeiro. </p>
+            <div class="parceiros">
+                <div class="capa"><img src="c:/Serel/assets/img/totvs.svg"><div class="hover"><p>Representante</p></div></div >
+                <div class="capa"><img src="c:/Serel/assets/img/byDoor.svg"><div class="hover"><p>Representante</p></div></div>
+                <div class="capa"><img src="c:/Serel/assets/img/totvs.svg"><div class="hover"><p>Representante</p></div></div>
+                <div class="capa"><img src="c:/Serel/assets/img/byDoor.svg"><div class="hover"><p>Representante</p></div></div>
+                <div class="capa"><img src="c:/Serel/assets/img/totvs.svg"><div class="hover"><p>Representante</p></div></div>
+                <div class="capa"><img src="c:/Serel/assets/img/byDoor.svg"><div class="hover"><p>Representante</p></div></div>
+            </div>
+        </div>
+    </div>
+
 <footer>
     <div class="container d-flex mt-5">
         <div class="col-md-6">
@@ -170,3 +247,4 @@
     </div>
 </footer>
         
+<script src="C:/Serel/js/index.js"></script> 
