--- a/index.html
+++ b/index.html
@@ -174,6 +174,39 @@
         </div>
     </div>
 
+    <div class="container">
+        <h1>Quem conhece acredita “Tradição”!</h1>
+        <p>Nosso compromisso é entregar qualidade para nossos clientes</p>
+        <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-interval="10000">
+                    <img src="c:/Serel/assets/img/Ult-slider-1.jpg" class="d-block w-100" alt="...">
+                    <div>
+                    <h2>Gabriel Zucca</h2>
+                    <p>CMO - Empresa XYZ</p>
+                    <p>Quanto conheci a Serel, percebi que era uma empresa que se preocupava em resolver o problema cliente, 
+                        com capacidade técnica e atendimento consultivo diferente das demais empresas do mercado que tive oportunidade de conhecer.
+                    </p>
+                </div>
+              </div>
+              <div class="carousel-item" data-interval="2000">
+                <img src="..." class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+    </div>
+
 <footer>
     <div class="container d-flex mt-5">
         <div class="col-md-6">
@@ -246,5 +279,3 @@
                
     </div>
 </footer>
-        
-<script src="C:/Serel/js/index.js"></script> 
