slider(incompleto) e ultima seção que faltava

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <link rel="stylesheet" href="C:/Serel/css/style.css"/>
     <link rel="stylesheet" href="C:/Serel/css/responsivo.css"/>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+    <link rel="stylesheet" href="c:/Serel/assets/library/slick-1.8.1/slick/slick.css">
+    <script src="c:/Serel/js/jquery.js"></script>
     <script src="C:/Serel/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
+    <script src="c:/Serel/assets/library/slick-1.8.1/slick/slick.min.js"></script>
+    <script src="c:/Serel/js/slider.js"></script>
 </head>
 
 
@@ -174,37 +176,44 @@
         </div>
     </div>
 
-    <div class="container">
-        <h1>Quem conhece acredita “Tradição”!</h1>
-        <p>Nosso compromisso é entregar qualidade para nossos clientes</p>
-        <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active" data-interval="10000">
-                    <img src="c:/Serel/assets/img/Ult-slider-1.jpg" class="d-block w-100" alt="...">
-                    <div>
-                    <h2>Gabriel Zucca</h2>
-                    <p>CMO - Empresa XYZ</p>
-                    <p>Quanto conheci a Serel, percebi que era uma empresa que se preocupava em resolver o problema cliente, 
-                        com capacidade técnica e atendimento consultivo diferente das demais empresas do mercado que tive oportunidade de conhecer.
-                    </p>
+        <div class="center">
+            <div>
+                <img src="c:/Serel/assets/img/Ult-slider-1.jpg">
+                <div class="row text-content">
+                    <div class="col-md-8">
+                        <h6>Gabriel Zucca</h6>
+                        <h8>CMO - Empresa XYZ</h8>
+                        <p>Quanto conheci a Serel, percebi que era uma empresa que se preocupava em resolver o problema cliente, com capacidade técnica e atendimento consultivo diferente das demais empresas do mercado que tive oportunidade de conhecer.</p>
+                    </div>
                 </div>
-              </div>
-              <div class="carousel-item" data-interval="2000">
-                <img src="..." class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-              </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
+            <div>
+                <img src="c:/Serel/assets/img/Ult-slider-1.jpg">
+                <div class="row text-content">
+                    <div class="col-md-8">
+                        <h6>Gabriel Zucca</h6>
+                        <h8>CMO - Empresa XYZ</h8>
+                        <p>Quanto conheci a Serel, percebi que era uma empresa que se preocupava em resolver o problema cliente, com capacidade técnica e atendimento consultivo diferente das demais empresas do mercado que tive oportunidade de conhecer.</p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <img src="c:/Serel/assets/img/Ult-slider-1.jpg">
+                <div class="row text-content">
+                    <div class="col-md-8">
+                        <h6>Gabriel Zucca</h6>
+                        <h8>CMO - Empresa XYZ</h8>
+                        <p>Quanto conheci a Serel, percebi que era uma empresa que se preocupava em resolver o problema cliente, com capacidade técnica e atendimento consultivo diferente das demais empresas do mercado que tive oportunidade de conhecer.</p>
+                    </div>
+                </div>
+            </div>
           </div>
+
+    <div class="container">
+        <div class="div-conheca">
+            <h1 class="conheca-melhor">Conheça mais e melhor a Serel</h1>
+            <button class="contato">CONTATO</button>
+        </div>
     </div>
 
 <footer>
