update slider section

--- a/index.html
+++ b/index.html
@@ -176,6 +176,11 @@
         </div>
     </div>
 
+<div class="sec-center pb-5">
+    <div  class="sec-slider pt-5">
+        <h1>Quem conhece acredita “Tradição”!</h1>
+        <h6>Nosso compromisso é entregar qualidade para nossos clientes</h6>
+    </div>
         <div class="center">
             <div>
                 <img src="c:/Serel/assets/img/Ult-slider-1.jpg">
@@ -208,8 +213,10 @@
                 </div>
             </div>
           </div>
+</div>
 
-    <div class="container">
+
+    <div class="container mt-5 mb-5">
         <div class="div-conheca">
             <h1 class="conheca-melhor">Conheça mais e melhor a Serel</h1>
             <button class="contato">CONTATO</button>
