--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <link
     rel="stylesheet" href="C:/Serel/bootstrap-4.4.1-dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="C:/Serel/css/style.css"/>
