--- a/index.html
+++ b/index.html
@@ -74,9 +74,15 @@
         <section id="servicos">
             <div class="container mt-5">
                 <div class="row">
-                    <div class="col-12 col-md-4"> <img class="img-fluid" src="c:/Serel/assets/img/desenvolvimentomobile.svg"></div>
-                    <div class="col-12 col-md-4"> <img class="img-fluid" src="c:/Serel/assets/img/SAS.svg"></div>
-                    <div class="col-12 col-md-4"> <img class="img-fluid" src="c:/Serel/assets/img/planoinstituido.svg"></div>
+                    <div class="col-12 col-md-4"> <img class="img-fluid" src="c:/Serel/assets/img/des-mobile.png">
+                    <p><span>Desenvolvimento</span>web/mobile</p>
+                    </div>
+                    <div class="col-12 col-md-4"> <img class="img-fluid" src="c:/Serel/assets/img/SAS.png">
+                    <p><span>Modalidade</span>SAS</p>
+                    </div>
+                    <div class="col-12 col-md-4"> <img class="img-fluid" src="c:/Serel/assets/img/plano-instituido.png">
+                    <p><span>Produto Plano</span>Instituído</p>
+                    </div>
                 </div>
             </div>
         </section>
