--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <div class="pos-f-t">
                 <button id="btn_acesso">Acesso restrito</button>
                 <nav class="navbar navbar-light col-12">
-                    <div class="col-9">
+                    <div class="col-6 col-sm-6 col-md-3 col-lg-3">
                         <a class="navbar-brand" href="#">
                             <img src="C:/Serel/assets/img/serel-logo.png" alt="" class="img-fluid"/>
                         </a>
                     </div>
-                    <div class="col-3">
+                    <div class="div-menu col-2">
                         <button class="navbar-toggler" id="btn_menu" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="menu">MENU</span>
                             <span class="navbar-toggler-icon"></span>
@@ -72,16 +72,16 @@
         </section>
             
         <section id="servicos">
-            <div class="container mt-5">
+            <div class="container">
                 <div class="row">
-                    <div class="col-12 col-md-4"> <img class="img-fluid" src="c:/Serel/assets/img/des-mobile.png">
-                    <p><span>Desenvolvimento</span>web/mobile</p>
+                    <div class="box-serv col-12 col-md-4"> <img class="img-fluid" src="c:/Serel/assets/img/des-mobile.png">
+                        <p><span>Desenvolvimento</span>web/mobile</p>
                     </div>
-                    <div class="col-12 col-md-4"> <img class="img-fluid" src="c:/Serel/assets/img/SAS.png">
-                    <p><span>Modalidade</span>SAS</p>
+                    <div class="box-serv col-12 col-md-4"> <img class="img-fluid" src="c:/Serel/assets/img/SAS.png">
+                        <p><span>Modalidade</span>SAS</p>
                     </div>
-                    <div class="col-12 col-md-4"> <img class="img-fluid" src="c:/Serel/assets/img/plano-instituido.png">
-                    <p><span>Produto Plano</span>Instituído</p>
+                    <div class="box-serv col-12 col-md-4"> <img class="img-fluid" src="c:/Serel/assets/img/plano-instituido.png">
+                        <p><span>Produto Plano</span>Instituído</p>
                     </div>
                 </div>
             </div>
@@ -89,11 +89,11 @@
 
         <section id="quem-somos">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-4 quemSomos">
+                <div class="row quem-group">
+                    <div class="col-md-5 quemSomos1">
                         <img class="img-fluid" src="c:/Serel/assets/img/quemSomos.jpg">
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-7 quemSomos2">
                         <h1 id="quemH1">Quem somos</h1>
                         <p class="quemP">Em junho de 1989 nascemos para desenvolver Sistemas especializados em Gestão e Controle de Fundos de           Pensão. Desde então conquistamos o reconhecimento da comunidade de Fundos de Pensão, graças ao profissionalismo da          nossa equipe, uma estreita interação com os clientes e, sobretudo, a permanente evolução dos produtos desenvolvidos.
                             <br><br>
