--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
         <section id="quem-somos">
             <div class="container">
                 <div class="row quem-group">
-                    <div class="col-md-5 quemSomos1">
-                        <img class="img-fluid" src="c:/Serel/assets/img/quemSomos.jpg">
-                    </div>
-                    <div class="col-md-7 quemSomos2">
-                        <h1 id="quemH1">Quem somos</h1>
-                        <p class="quemP">Em junho de 1989 nascemos para desenvolver Sistemas especializados em Gestão e Controle de Fundos de           Pensão. Desde então conquistamos o reconhecimento da comunidade de Fundos de Pensão, graças ao profissionalismo da          nossa equipe, uma estreita interação com os clientes e, sobretudo, a permanente evolução dos produtos desenvolvidos.
-                            <br><br>
-                            De forma prática, estes são reflexos de um compromisso nosso: construir soluções exclusivas para cada entidade. Assim, pensamos, produzimos, testamos e implantamos!
-                        </p>
+                    <div class="col-md-12 quemSomos1">
+                        <img class="img-fluid img-somos" src="c:/Serel/assets/img/quemSomos.jpg">
+                        <div class="col-md-7 quemSomos2">
+                            <h1 id="quemH1">Quem somos</h1>
+                            <p class="quemP">Em junho de 1989 nascemos para desenvolver Sistemas especializados em Gestão e Controle de Fundos de           Pensão. Desde então conquistamos o reconhecimento da comunidade de Fundos de Pensão, graças ao profissionalismo da          nossa equipe, uma estreita interação com os clientes e, sobretudo, a permanente evolução dos produtos desenvolvidos.
+                                <br><br>
+                                De forma prática, estes são reflexos de um compromisso nosso: construir soluções exclusivas para cada entidade. Assim, pensamos, produzimos, testamos e implantamos!
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -212,8 +212,8 @@
                         <div>
                             <img src="c:/Serel/assets/img/Ult-slider-1.jpg">
                         </div>
-                        <div class="row text-content col-12">
-                            <div class="col-md-8">
+                        <div class="text-content">
+                            <div class=" col-12 col-md-12">
                                 <h6>Gabriel Zucca</h6>
                                 <h8>CMO - Empresa XYZ</h8>
                                 <p>Quanto conheci a Serel, percebi que era uma empresa que se preocupava em resolver o problema cliente, com capacidade técnica e atendimento consultivo diferente das demais empresas do mercado que tive oportunidade de conhecer.</p>
@@ -224,8 +224,8 @@
                         <div>
                             <img src="c:/Serel/assets/img/Ult-slider-1.jpg">
                         </div>
-                        <div class="row text-content col-12">
-                            <div class="col-md-8">
+                        <div class="text-content">
+                            <div class=" col-12 col-md-12">
                                 <h6>Gabriel Zucca</h6>
                                 <h8>CMO - Empresa XYZ</h8>
                                 <p>Quanto conheci a Serel, percebi que era uma empresa que se preocupava em resolver o problema cliente, com capacidade técnica e atendimento consultivo diferente das demais empresas do mercado que tive oportunidade de conhecer.</p>
@@ -236,8 +236,8 @@
                         <div>
                             <img src="c:/Serel/assets/img/Ult-slider-1.jpg">
                         </div>
-                        <div class="row text-content col-12">
-                            <div class="col-md-8">
+                        <div class="text-content">
+                            <div class=" col-12 col-md-12">
                                 <h6>Gabriel Zucca</h6>
                                 <h8>CMO - Empresa XYZ</h8>
                                 <p>Quanto conheci a Serel, percebi que era uma empresa que se preocupava em resolver o problema cliente, com capacidade técnica e atendimento consultivo diferente das demais empresas do mercado que tive oportunidade de conhecer.</p>
